--- a/contact-worker.html
+++ b/contact-worker.html
@@ -39,7 +39,7 @@
             <a href="my-records.html" class="menu-item">
                 <i class="fas fa-file-medical"></i> Medical Records
             </a>
-            <a href="#" class="menu-item">
+            <a href="health-resources.html" class="menu-item">
                 <i class="fas fa-book-medical"></i> Health Resources
             </a>
             <a href="contact-worker.html" class="menu-item active">
